2018-05-01  Chris Dumez  <cdumez@apple.com>

        REGRESSION (r230919): API test WebKit.AutoLayoutIntegration is a flaky failure
        https://bugs.webkit.org/show_bug.cgi?id=184918
        <rdar://problem/39705516>

        Reviewed by Wenson Hsieh.

        Make sure provisional load has started before calling beginLayoutAtMinimumWidth
        on the AutoLayoutWKWebView to restore pre-r230919 behavior. The load now starts
        asynchronously because we ask the client if it is OK to do the load and the policy
        delegates are asynchronous nowadays.

        * TestWebKitAPI/Tests/WebKitCocoa/AutoLayoutIntegration.mm:
        (-[AutoLayoutWKWebView load:withWidth:expectingContentSize:resettingWidth:]):
        * TestWebKitAPI/cocoa/TestNavigationDelegate.h:
        * TestWebKitAPI/cocoa/TestNavigationDelegate.mm:
        (-[TestNavigationDelegate webView:didStartProvisionalNavigation:]):
        (-[TestNavigationDelegate waitForDidStartProvisionalNavigation]):
        (-[WKWebView _test_waitForDidStartProvisionalNavigation]):

2018-05-01  Ross Kirsling  <ross.kirsling@sony.com>

        [WinCairo] Align buildbot test stages with AppleWin.
        https://bugs.webkit.org/show_bug.cgi?id=185094

        Reviewed by Brent Fulgham.

        * BuildSlaveSupport/build.webkit.org-config/factories.py:
        (TestFactory.__init__):
        Do run API tests, don't run dashboard tests.

        * BuildSlaveSupport/build.webkit.org-config/steps.py:
        (RunUnitTests):
        Call run-api-tests with Python, not Perl (bugfix for r230998).

        * Scripts/webkitpy/port/win.py:
        (WinPort.environment_for_api_tests):
        Retrieve necessary Windows environment variables.

2018-05-01  Eric Carlson  <eric.carlson@apple.com>

        [MediaStream] remove WK1 support
        https://bugs.webkit.org/show_bug.cgi?id=185136

        Reviewed by Youenn Fablet.

        * DumpRenderTree/mac/UIDelegate.mm: